# agwb

./: README.md  addr_gen_wb.core  example1.xml  setup.cfg
agwb/: agwb.py
doc/: conf.py  index.rst  installation_and_usage.rst  overview.rst  python.rst  vhdl.rst  xml_description.rst
hdl/: agwb_pkg.vhd
hdl/wb_cdc/: main.eprj  wb_cdc.core  wb_cdc.tcl  wb_cdc.vhd  wb_cdc_wrapper.tcl
python-support/: agwb.py
src/: addr_gen_wb.py  addr_gen_wb_fusesoc_wrapper.py  addr_gen_wb_fusesoc_wrapper_local.py  agwb.dtd  agwb.rnc  agwb.rng  expressions.py  include.py  relax_ng.xml  rng2dtd.sh  rng2rnc.sh  wb_block.py
test/: Makefile  block1.xml  block2.xml  block3.xml  block4.xml  example1.xml  generate.sh  prepare.sh  wb_test.sh  wb_test_top_tb.sav
test/forth/: bf.fs
test/hdl/: extern.vhd  exttest.vhd  htest.vhd  main.vhd  sim_wb_ctrl.vhd  sys1.vhd  wb_cdc.vhd  wb_test_top.vhd  wb_test_top_tb.vhd
test/python/: cbus.py  wb_test.py
test/python_raw/: agwb  agwb.py  wb_test.py
test2/: README.md  build.sh  eprj_build.tcl  eprj_create.tcl  generate.sh  proj_def.tcl
test_ao/: Makefile  example1.xml  prepare.sh
test_ao/hdl/: exttest.vhd  main.vhd  sys1.vhd  wb_cdc.vhd  wb_test_top.vhd
test_ao/python_raw/: wb_test.py
tests/test/: Makefile  block1.xml  example1.xml  generate.sh  wb_test.sh  wb_test_top_tb.sav  xnest.xml  xtest.xml
tests/test2/: eprj_write.tcl  generate.sh  prepare.sh  proj_def.tcl
tests/test_ao/: Makefile  block1.xml  example1.xml  wb_test_top_tb.sav
tests/test_aoai/: block1.xml  example1.xml  prepare.sh  wb_test_top_tb.sav
(+42 files in other folders)
