[metadata]
name = agwb
description = agwb
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL v2
keywords =
    HDL
    RTL
    FPGA
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GPL v2
author = Wojciech M. Zabołotny
url = https://github.com/wzab/addr_gen_wb

[options]
packages = find:
